// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputField matches snapshot: enzyme.mount 1`] = `
<InputField
  hint={null}
  input={Object {}}
  meta={Object {}}
>
  <glamorous(label)>
    <label
      className="css-wd82g1"
    >
      <glamorous(span)>
        <span
          className="css-1m1nyko"
        >
          example
        </span>
      </glamorous(span)>
      <glamorous(input)
        type="text"
      >
        <input
          className="css-opcxs3"
          type="text"
        />
      </glamorous(input)>
    </label>
  </glamorous(label)>
</InputField>
`;

exports[`InputField matches snapshot: enzyme.render 1`] = `
<label
  class="css-wd82g1"
>
  <span
    class="css-1m1nyko"
  >
    example
  </span>
  <input
    class="css-opcxs3"
    type="text"
  />
</label>
`;

exports[`InputField matches snapshot: enzyme.shallow 1`] = `
<glamorous(label)>
  <glamorous(span)>
    example
  </glamorous(span)>
  <glamorous(input)
    type="text"
  />
</glamorous(label)>
`;
